--- a/Views/Student/Delete.cshtml
+++ b/Views/Student/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Students</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this Student?</h3>
 <div>
-    <h4>Student</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
