--- a/Views/Student/Details.cshtml
+++ b/Views/Student/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Students</h1>
 
 <div>
-    <h4>Student</h4>
+    <h4>Details</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -26,13 +26,13 @@
             @Html.DisplayNameFor(model => model.Classes)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Classes.id)
+            @Html.DisplayFor(model => model.Classes.class_name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Countries)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Countries.id)
+            @Html.DisplayFor(model => model.Countries.name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.created_date)
