--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Students</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-outline-primary" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -24,12 +24,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Countries)
             </th>
-            <th>
+            @* <th>
                 @Html.DisplayNameFor(model => model.created_date)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.modified_date)
-            </th>
+            </th> *@
             <th></th>
         </tr>
     </thead>
@@ -40,24 +40,24 @@
                 @Html.DisplayFor(modelItem => item.name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.date_of_birth)
+                @Html.DisplayFor(modelItem =>  item.date_of_birth)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Classes.id)
+                @Html.DisplayFor(modelItem => item.Classes.class_name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Countries.id)
+                @Html.DisplayFor(modelItem => item.Countries.name)
             </td>
-            <td>
+            @* <td>
                 @Html.DisplayFor(modelItem => item.created_date)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.modified_date)
-            </td>
+            </td> *@
             <td>
-                <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                <a class="btn btn-outline-secondary" asp-action="Edit"  asp-route-id="@item.id">Edit</a> 
+                <a class="btn btn-outline-success" asp-action="Details" asp-route-id="@item.id">Details</a> 
+                <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.id">Delete</a>
             </td>
         </tr>
 }
