--- a/Views/Class/Delete.cshtml
+++ b/Views/Class/Delete.cshtml
@@ -30,9 +30,9 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+     <form asp-action="Delete">
         <input type="hidden" asp-for="id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-outline-danger" /> 
+        <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
     </form>
 </div>
