--- a/Views/Class/Edit.cshtml
+++ b/Views/Class/Edit.cshtml
@@ -18,15 +18,15 @@
                 <input asp-for="class_name" class="form-control" />
                 <span asp-validation-for="class_name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group mt-3">
+                <input type="submit" value="Save" class="btn btn-outline-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div class="mt-3">
+    <a  class="btn btn-outline-dark" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
