--- a/Views/Country/Details.cshtml
+++ b/Views/Country/Details.cshtml
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-outline-secondary" asp-action="Edit" asp-route-id="@Model?.id">Edit</a> 
+    <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
 </div>
