--- a/Views/Student/Create.cshtml
+++ b/Views/Student/Create.cshtml
@@ -31,15 +31,15 @@
                 <select asp-for="CountriesId" class ="form-control" asp-items="ViewBag.CountriesId"></select>
             </div>
             
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-3">
+                <input type="submit" value="Create" class="btn btn-outline-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div class="mt-3">
+    <a  class="btn btn-outline-dark" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
