--- a/Views/Student/Delete.cshtml
+++ b/Views/Student/Delete.cshtml
@@ -26,13 +26,13 @@
             @Html.DisplayNameFor(model => model.Classes)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Classes.id)
+            @Html.DisplayFor(model => model.Classes.class_name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Countries)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Countries.id)
+            @Html.DisplayFor(model => model.Countries.name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.created_date)
@@ -50,7 +50,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-outline-danger" /> 
+        <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
     </form>
 </div>
