--- a/Views/Country/Index.cshtml
+++ b/Views/Country/Index.cshtml
@@ -9,7 +9,8 @@
 <p>
     <a class="btn btn-outline-primary" asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<div class="table-responsive">
+<table class="table table-bordered table-hover">
     <thead>
         <tr>
             <th>
@@ -37,11 +38,14 @@
                 @Html.DisplayFor(modelItem => item.modified_date)
             </td> *@
             <td>
-                <a class="btn btn-outline-secondary" asp-action="Edit"  asp-route-id="@item.id">Edit</a> 
-                <a class="btn btn-outline-success" asp-action="Details" asp-route-id="@item.id">Details</a> 
-                <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                 <div class="d-grid gap-1 d-md-block">
+                    <a class="btn btn-outline-secondary" asp-action="Edit"  asp-route-id="@item.id">Edit</a> 
+                    <a class="btn btn-outline-success" asp-action="Details" asp-route-id="@item.id">Details</a> 
+                    <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                </div>
             </td>
         </tr>
 }
     </tbody>
 </table>
+ </div>
