--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - School - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - <a href="https://github.com/mahmoudalrahbi">Mahmoud AlRahbi</a> 
         </div>
     </footer>
     <script src="location/of/the/bootstrap.js/here"></script>
